--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>vbj</name>
+	<name>ForecastApp</name>
 	<description>Seed project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -25,17 +25,17 @@
 	</properties>
 
 	<dependencies>
-	 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
-	 	<dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
-	 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
@@ -66,11 +66,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>javax.el</groupId>
-		    <artifactId>javax.el-api</artifactId>
-		    <version>3.0.0</version>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
 		</dependency>
-		
+
 		<!-- Extra -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -83,59 +83,60 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<version>6.3.6.jre8-preview</version>
 		</dependency>
-		
+
 	</dependencies>
 
-	<!-- <build>
+	<build>
+		<finalName>ForecastApp</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-			  <artifactId>exec-maven-plugin</artifactId>
-			  <groupId>org.codehaus.mojo</groupId>
-			  <version>1.4.0</version>
-			  <executions>
-			    <execution>
-			      <id>npm install</id>
-			      <goals>
-			        <goal>exec</goal>
-			      </goals>
-			      <phase>generate-sources</phase>
-			      <configuration>
-			        <executable>npm</executable>
-			        <arguments>
-			          <argument>install</argument>
-			        </arguments>
-			        <workingDirectory>${basedir}/src/ui</workingDirectory>
-			        <target>
-			          <echo message="Npm install" />
-			        </target>
-			      </configuration>
-			    </execution>
-			    <execution>
-			      <id>npm run build</id>
-			      <goals>
-			        <goal>exec</goal>
-			      </goals>
-			      <phase>compile</phase>
-			      <configuration>
-			        <executable>npm</executable>
-			        <arguments>
-			          <argument>run</argument>
-			          <argument>build</argument>
-			        </arguments>
-			        <workingDirectory>${basedir}/src/ui</workingDirectory>
-			        <target>
-			          <echo message="Npm build" />
-			        </target>
-			      </configuration>
-			    </execution>
-			  </executions>
+				<artifactId>exec-maven-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<phase>generate-sources</phase>
+						<configuration>
+							<executable>npm</executable>
+							<arguments>
+								<argument>install</argument>
+							</arguments>
+							<workingDirectory>${basedir}/src/ui</workingDirectory>
+							<target>
+								<echo message="Npm install" />
+							</target>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm run build</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<phase>compile</phase>
+						<configuration>
+							<executable>npm</executable>
+							<arguments>
+								<argument>run</argument>
+								<argument>build</argument>
+							</arguments>
+							<workingDirectory>${basedir}/src/ui</workingDirectory>
+							<target>
+								<echo message="Npm build" />
+							</target>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
-	</build> -->
+	</build>
 
 
 </project>
